--- a/src/css/frontpage/TopColumns.css
+++ b/src/css/frontpage/TopColumns.css
@@ -1,4 +1,5 @@
 .parent {
+    height: 250vh;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(14, 1fr);
@@ -14,7 +15,7 @@
 }
 
 .div1 img {
-    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
