--- a/src/css/App.css
+++ b/src/css/App.css
@@ -40,6 +40,10 @@ h2 {
   color: white
 }
 
+.bold { 
+  font-weight: 500;
+}
+
 .img { 
   width: 100%;
   height: 100%;
@@ -56,6 +60,14 @@ h2 {
 
 .h1-container {
   align-self: end;
+}
+
+.divider { 
+  height: 20vh;
+}
+
+.center { 
+  text-align: center;
 }
 
 .footer {
