Added subsites to react router

--- a/src/css/frontpage/TopColumns.css
+++ b/src/css/frontpage/TopColumns.css
@@ -9,60 +9,74 @@
 
 
 
-.div1 {
+.parent  .div1 {
     grid-area: 2 / 7 / 6 / 13;
 
 }
 
-.div1 img {
+.parent  .div1 img {
     width: 100%;
     object-fit: cover;
 }
 
-.div2 {
+.parent  .div2 {
     grid-area: 3 / 2 / 4 / 6;
 
 }
 
 
 
-.div3 {
-    grid-area: 4 / 2 / 6 / 4;
-}
-
-.div4 {
-    grid-area: 4 / 4 / 6 / 6;
+.parent  .div3 {
+    grid-area: 4 / 2 / 6 / 6;
 
 }
 
-.div5 {
+
+.parent  .div5 {
     grid-area: 7 / 5 / 8 / 10;
 }
 
-.div6 {
-    grid-area: 8 / 5 / 11 / 7;
+.parent  .div6 {
+
+    grid-area: 8 / 5 / 11 / 9;
+
 }
 
-.div7 {
+.parent  .div7 {
     grid-area: 8 / 7 / 11 / 9;
 }
 
-.div8 {
+.parent  .div8 {
     grid-area: 8 / 2 / 10 / 4;
 }
 
-.div9 {
+.parent  .div9 {
     grid-area: 8 / 11 / 10 / 13;
 }
 
-.div10 {
+.parent  .div10 {
     grid-area: 12 / 8 / 13 / 12;
 }
 
-.div11 {
+.parent  .div11 {
     grid-area: 13 / 8 / 14 / 12;
 }
 
-.div12 {
+.parent  .div12 {
     grid-area: 12 / 3 / 14 / 5;
 }
+
+@media only screen and (max-width: 1200px) {
+    .parent  .div3 {
+        grid-area: 4 / 2 / 6 / 6;
+        display: inherit;
+      
+    }
+    .parent  .div6 {
+        grid-area: 8 / 5 / 11 / 9;
+        display: inherit;
+     
+    }
+
+  
+  }
