--- a/src/css/services.css
+++ b/src/css/services.css
@@ -66,3 +66,26 @@
 .services .div15 {
     grid-area: 16 / 7 / 20 / 12;
 }
+
+@media (max-width: 1000px) {
+
+
+    .services {
+        display: initial;
+        height: auto;
+    }
+
+    .services h1 {
+        color: #003366
+    }
+
+    .services p {
+        color: rgb(26, 26, 26);
+    }
+
+    .services .img {
+        margin-top: 20px;
+    }
+
+
+}
