--- a/src/css/products.css
+++ b/src/css/products.css
@@ -1,13 +1,9 @@
-.wrapper {
-    padding: calc(100%/12)
-}
-
 .card {
     width: 20%;
     text-align: center;
     display: inline-block;
     margin: 20px;
-    height: 300px;
+    height: 100%;
     border-radius: 2rem;
     cursor: pointer;
 }
