--- a/src/navigation/Nav.css
+++ b/src/navigation/Nav.css
@@ -7,12 +7,12 @@ nav {
   box-sizing: border-box;
   top: 0;
   background-color: rgba(255, 255, 255, 0.9);
-  z-index: 10;
-  font-family: 'Open Sans', sans-serif;
+  z-index: 500;
+  font-family: 'Roboto', sans-serif;
 }
 
 .responsive {
-  visibility: hidden;
+  display: none;
 }
 
 nav ul {
@@ -28,7 +28,7 @@ nav ul {
 nav ul li {
   display: inline-block;
   font-size: 12px;
-  letter-spacing: 1px;
+  font-weight: 600;
   cursor: pointer;
   line-height: 80px;
   margin: 0 10px;
@@ -77,6 +77,7 @@ nav ul li:hover {
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     transition: 0.5s;
+
   }
 
   .responsive li {
@@ -87,20 +88,89 @@ nav ul li:hover {
     margin: 0 10px;
     padding: 0 2vw;
     transition: 0.3s;
-    text-decoration: none;
     color: #303030;
   }
 
-  .navClose {
-    visibility: hidden;
-    float: right;
-    font-size: 42px;
-    cursor: pointer;
-    line-height: 80px;
-    margin-right: 30px;
-    padding: 0 2vw;
-    animation: moveIn 1s;
+  .responsive a:link {
+    text-decoration: none;
   }
+
+
+
+  #nav-icon1,
+  #nav-icon2,
+  #nav-icon3,
+  #nav-icon4 {
+    margin: 15px;
+    width: 60px;
+    height: 45px;
+    position: relative;
+    float: right;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+  }
+
+  #nav-icon1 span,
+  #nav-icon3 span,
+  #nav-icon4 span {
+    display: block;
+    position: absolute;
+    height: 6px;
+    width: 80%;
+    background: #003366;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  #nav-icon1 span:nth-child(1) {
+    top: 0px;
+  }
+
+  #nav-icon1 span:nth-child(2) {
+    top: 18px;
+  }
+
+  #nav-icon1 span:nth-child(3) {
+    top: 36px;
+  }
+
+  #nav-icon1.open span:nth-child(1) {
+    top: 18px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+
+  #nav-icon1.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+
+  #nav-icon1.open span:nth-child(3) {
+    top: 18px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+  }
+
 
   .hamburger {
     visibility: visible;
@@ -108,8 +178,6 @@ nav ul li:hover {
     font-size: 42px;
     cursor: pointer;
     line-height: 80px;
-    margin-right: 30px;
-    padding: 0 2vw;
     color: #303030;
   }
 
